ASUSFETest/src/objects/Term__c.object
<CustomObject>
    <description>Academic term</description>
    <fields>
        <fullName>PeopleSoft_Code__c</fullName>
        <label>PeopleSoft Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_A_C_Close_Date__c</fullName>
        <description>21st Day of the Session</description>
        <label>Session A/C Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_A_C_Start_Date__c</fullName>
        <description>Day classes begin</description>
        <label>Session A/C Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_B_Close_Date__c</fullName>
        <description>21st Day for Session B</description>
        <label>Session B Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_B_Start_Date__c</fullName>
        <description>Day classes begin for Session B</description>
        <label>Session B Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>